# speckle-ifc

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
src/speckle_ifc/cmd/: ifc_to_speckle.py
