[tool.poetry]
name = "speckle-ifc"
version = "0.1.0"
description = "IFC <-> Speckle"
authors = ["Iain Sproat"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12" # limited to <3.12 due to ifcopenshell. When it grows up, we can too.
specklepy="2.18.2"
click="8.1.7"
ifcopenshell="0.7.0.231218"
PyYAML="6.0.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pytest = "8.1.1"
pytest-ordering = "0.6"
pytest-cov = "4.1.0"
devtools = "0.12.2"
types-ujson = "5.9.0.0"
types-requests = "2.31.0.20240218"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]


[tool.commitizen]
name = "cz_conventional_commits"
version = "2.9.2"
tag_format = "$version"

[tool.isort]
profile = "black"
